--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "wget https://raw.githubusercontent.com/xudafeng/autoresponsive-react-native/master/lib/index.js -O node_modules/autoresponsive-react-native/lib/index.js && node node_modules/react-native/local-cli/cli.js start"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "autoresponsive-react-native": "^1.0.8",
+    "autoresponsive-react-native": "git+https://github.com/neoalienson/autoresponsive-react.git",
     "react": "15.3.2",
     "react-native": "0.34.0",
     "react-native-video": "^0.9.0"
