--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "react-native": "0.34.0",
     "react-native-country-picker-modal": "git+https://github.com/neoalienson/react-native-country-picker-modal.git",
     "react-native-elements": "^0.6.1",
+    "react-native-simple-events": "^1.0.1",
     "react-native-vector-icons": "^2.1.0",
     "react-native-video": "^0.9.0"
   }
