--- a/app/package.json
+++ b/app/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "15.3.2",
     "react-native": "0.34.0",
+    "react-native-camera": "git+https://github.com/neoalienson/react-native-camera.git",
     "react-native-country-picker-modal": "git+https://github.com/neoalienson/react-native-country-picker-modal.git",
     "react-native-elements": "^0.6.1",
     "react-native-simple-events": "^1.0.1",
